--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@bugbearr/lib-tmpl",
-  "description": "Template for node library",
+  "name": "@bugbearr/containerutil",
+  "description": "Container utility library",
   "version": "0.0.1",
   "browserslist": [
     "ie 11",
@@ -34,7 +34,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "repository": "github:bugbearr/node-lib-tmpl",
+  "repository": "github:bugbearr/containerUtil-js",
   "scripts": {
     "build": "run-s clean:umd build:umd clean:min build:min",
     "build:min": "cross-env NODE_ENV=production babel esm --out-dir min",
